# pkg/docs/swagger.json
@@ -177,6 +177,15 @@
     },
     "definitions": {
         "models.Item": {
+            "$ref": "#/definitions/storage.TodoItem"
+        },
+        "storage.TodoItem": {
+            "$ref": "#/definitions/types.TodoItem"
+        },
+        "todo.HTTPError": {
+            "$ref": "#/definitions/echo.HTTPError"
+        },
+        "types.TodoItem": {
             "type": "object",
             "properties": {
                 "due_date": {
@@ -199,9 +208,6 @@
                     "example": "do something in future"
                 }
             }
-        },
-        "todo.HTTPError": {
-            "$ref": "#/definitions/echo.HTTPError"
         }
     }
 }
